# ops-blas

./: CMakeLists.txt  OAT.xml  README.md  SECURITY.md  build.sh  install_deps.sh  requirements.txt  todo_list.md
.gitcode/: PULL_REQUEST_TEMPLATE.zh-CN.md
.github/workflows/: build-and-test.yml
blas/: CMakeLists.txt
blas/aclblas_sger/: CMakeLists.txt  aclblas_sger.cpp  aclblas_sger.h  sger_kernel.cpp  sger_tiling.h  test_api.cpp  test_sger.cpp  test_verbose.cpp
blasLt/: CMakeLists.txt  aclblasLt.cpp
docs/: QUICKSTART.md
docs/zh/: api_list.md
docs/zh/install/: quick_install.md
include/: blas_api.h  cann_ops_blasLt.h
src/copy/: scopy_host.cpp  scopy_kernel.cpp
test/: CMakeLists.txt
test/blasLtMatmul/: README.md  blasLtMatmul_test.cpp
test/scopy/: CMakeLists.txt  README.md  scopy_test.cpp
test/utils/: error_check.h  golden.h
