if(BUILD_TEST)
    # 支持多算子列表（TEST_NAMES 是分号分隔的 CMake 列表）
    foreach(TEST_NAME ${TEST_NAMES})
        if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${TEST_NAME})
            add_subdirectory(${TEST_NAME})
        else()
            message(FATAL_ERROR "TEST directory not found: ${TEST_NAME}")
        endif()
    endforeach()
endif()